// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator kotlin of kotlin JHipster blueprint > gradle > should match source calls 1`] = `
{
  "addGradleDependencyCatalogPlugins": [
    [
      {
        "addToBuild": true,
        "id": "org.jlleitschuh.gradle.ktlint",
        "pluginName": "ktlint",
        "version": "'KTLINT-GRADLE-VERSION'",
      },
    ],
  ],
  "applyFromGradle": [
    {
      "script": "gradle/ktlint.gradle",
    },
  ],
}
`;

exports[`SubGenerator kotlin of kotlin JHipster blueprint > gradle > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/ktlint.gradle": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator kotlin of kotlin JHipster blueprint > maven > should match source calls 1`] = `
{
  "addJavaDefinition": [
    {
      "versions": [
        {
          "name": "ktlint-maven-plugin",
          "version": "'KTLINT-MAVEN-VERSION'",
        },
      ],
    },
  ],
  "addMavenDefinition": [
    {
      "plugins": [
        {
          "additionalContent": "                <executions>
                    <execution>
                        <id>check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <failOnViolation>false</failOnViolation>
                        </configuration>
                    </execution>
                </executions>",
          "artifactId": "ktlint-maven-plugin",
          "groupId": "com.github.gantsign.maven",
          "version": "\${ktlint-maven-plugin.version}",
        },
      ],
    },
  ],
}
`;

exports[`SubGenerator kotlin of kotlin JHipster blueprint > maven > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
}
`;
